<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    tools:context=".WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/Intro" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="8dp"
            android:layout_rowWeight="1"
            android:textSize="18sp"
            android:text="@string/P1" />

        <EditText
            android:id="@+id/P1EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_rowWeight="1"
            android:hint="@string/P1Hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAlignment="center"
            android:layout_rowWeight="1"
            android:textSize="18sp"
            android:text="@string/P2" />

        <EditText
            android:id="@+id/P2EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_rowWeight="1"
            android:hint="@string/P2Hint"/>


    </GridLayout>

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/playButton"/>


</GridLayout>